# BG3ModUtils

./: .gitignore  debug.py  enums.py  mod_manager.py  pyproject.toml  setup.py
bg3modutils/: file_manager.py  lslib.py
bg3modutils.egg-info/: PKG-INFO  SOURCES.txt
src/bg3modutils/: __init__.py  lslib.py  paths.py
src/bg3modutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bg3modutils/model/: meta.py  mod.py  progression.py  spell.py
src/bg3modutils/utils/: enums.py  file_manager.py  lslib.py  paths.py
src/bg3modutils/utils/ExportTool/: settings.json
