[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bg3modutils"
version = "0.0.2"
authors = [{ name = "fierrof", email = "facufierro@gmail.com" }]
description = "Modding tools for Baldur's Gate 3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['lxml']

[project.urls]
"Homepage" = "https://github.com/facufierro/BG3ModUtils"
"Bug Tracker" = "https://github.com/facufierro/BG3ModUtils/issues"
